--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> Wlcom to Database.course~</title>
+    <title> Wlcome to Database.course~ </title>
   </head>
   <body> <h1>Success. The Database.course virtual host is working!</h1>
   </body>
