--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <html>
-  <head>
-    <title> Welcome to Database.course~ </title>
-  </head>
-  <body> <h1>Success. The Database.course virtual host is working!</h1>
-  </body>
+<head><title> User's Data </title></head>
+<body background="">
+<h2 align="center">Welcome~</h2>
+<form action="insertData.php" method="post">
+<center><table border="1" width="400" height="255">
+<tr>
+<td colspan="5" align="center"> User's Information</td>
+</tr>
+
+<tr>
+<td align="right">Name: </td><td><input type="text" name="name"</td>
+</tr>
+
+<tr>
+<td align="right">Pass: </td><td><input type="password" name="passwd"</td> 
+</tr>
+
+<tr>
+<td colspan="5" align="center"><input type="submit" name="submit" value="submit"</td>
+</tr>
+
+
+</table></center>
+</form>
+</body>
 </html>
+
+
+
