--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 
+
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -26,9 +28,9 @@
             <!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
             <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
             <p id="profile-name" class="profile-name-card"></p>
-            <form class="form-signin" action="insertData.php" method="POST">
+            <form class="form-signin" action="php/authenticate.php" method="POST">
                 <span id="reauth-email" class="reauth-email"></span>
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus name="name">
+                <input type="text" id="inputEmail" class="form-control" placeholder="User name" required autofocus name="name">
                 <input type="password" id="inputPassword" class="form-control" placeholder="Password" required name="passwd">
                 <div id="remember" class="checkbox">
                     <label>
@@ -39,6 +41,9 @@
             </form><!-- /form -->
             <a href="#" class="forgot-password">
                 Forgot the password?
+            </a>
+            <a href="create_acount.html" class="forgot-password">
+                Create acount
             </a>
         </div><!-- /card-container -->
     </div><!-- /container -->
