--- a/create_acount.html
+++ b/create_acount.html
@@ -37,7 +37,7 @@
                     <div class='input-group col'>
                         <input type='text' class='form-control' id='name' placeholder='User name' required autofocus name='name'>
                         <div class="input-group-append">
-                            <span class="input-group-text">invalid</span>
+                            <span class="input-group-text"></span>
                         </div>
                     </div>
                 </div>
