update of website

--- a/HEADER.html
+++ b/HEADER.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: #E3F2FD;">
   <div class='container-fluid'>
     <div class='navbar-header'>
-      <a class='navbar-brand' href='#'> MUlody</a>
+      <a class='navbar-brand' href='./'> MUlody</a>
       <button type='button' class='navbar-toggler' data-toggle='collapse' data-target='#navbarsMain' aria-controls='navbarsMain' aria-expanded='false'>
         <span class='navbar-toggler-icon'></span>
       </button>
@@ -10,7 +10,7 @@
 
     <div class="collapse navbar-collapse" id="navbarsMain">
       <ul class="navbar-nav">
-        <li class="nav-item active"><a class="nav-link" href="#">HOME<span class="sr-only">(current)</span></a></li>
+        <li class="nav-item active"><a class="nav-link" href="./">HOME<span class="sr-only">(current)</span></a></li>
       </ul>
 
           
