--- a/musicPlayer.html
+++ b/musicPlayer.html
@@ -24,7 +24,10 @@
         var hrefVar=decodeURI($.urlParam('path'));
         var full="Music/"+hrefVar;
         $('#playingAudio').attr("src", full).detach().appendTo("#audioPlayer");
-        $('#audioCardTitle').text(hrefVar.slice(0,-4));
+        
+        var title = hrefVar.split('/');
+        title = title[title.length-1];
+        $('#audioCardTitle').text(title.slice(0,-4));
       });
     </script>
     
@@ -39,15 +42,18 @@
     <div id="HEADER"></div>
     <div class='container'>
       <div class="row justify-content-around">
-        <div class="card col-md-6">
-          <h5><div class='card-header text-center' id='audioCardTitle'></div></h5>
-          <div class='card-body'>
-            <audio controls id="audioPlayer" class="col" style="height: 50px;">
-              <source src="" type="audio/mpeg" id="playingAudio">
-            Your browser does not support the audio element.
-            </audio>
-          </div>
-        </div><!--End of card-->
+        <div class="col-md-6">
+          <div class="card">
+            <h5><div class="card-header text-center" id="audioCardTitle"></div></h5>
+            <img class="card-img-top mx-auto mt-3" src="image/earphone.png" style="width: 200px;">
+            <div class='card-body'>
+              <audio controls id="audioPlayer" class="col" style="height: 50px;">
+                <source src="" type="audio/mpeg" id="playingAudio">
+              Your browser does not support the audio element.
+              </audio>
+            </div>
+          </div><!--End of card-->
+        </div>
       </div><!--End of row-->
     </div><!--End of container-->
   </body>
